deployment/classifier-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: accident-classifier
    app.kubernetes.io/component: accident-classifier
    app.kubernetes.io/instance: accident-classifier
    app.kubernetes.io/name: accident-classifier
    app.kubernetes.io/part-of: ml-classifier-apps
  name: accident-classifier
  namespace: balki404-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: accident-classifier
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: accident-classifier
        deployment: accident-classifier
    spec:
      containers:
      - image: quay.io/balki404/fire-accident-classifier
        imagePullPolicy: Always
        name: accident-classifier
        ports:
        - containerPort: 5000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: accident-classifier
    app.kubernetes.io/component: accident-classifier
    app.kubernetes.io/instance: accident-classifier
    app.kubernetes.io/name: accident-classifier
    app.kubernetes.io/part-of: ml-classifier-apps
  name: accident-classifier
spec:
  ports:
  - name: 5000-tcp
    port: 5000
  selector:
    app: accident-classifier
    deployment: accident-classifier
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: accident-classifier
    app.kubernetes.io/component: accident-classifier
    app.kubernetes.io/instance: accident-classifier
    app.kubernetes.io/name: accident-classifier
    app.kubernetes.io/part-of: ml-classifier-apps
  name: accident-classifier
spec:
  port:
    targetPort: 5000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: accident-classifier
    weight: 100
  wildcardPolicy: None
