deployment/fai-event-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fai-event-consumer
    app.kubernetes.io/component: fai-event-consumer
    app.kubernetes.io/instance: fai-event-consumer
    app.kubernetes.io/name: fai-event-consumer
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-consumer
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fai-event-consumer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fai-event-consumer
        deployment: fai-event-consumer
    spec:
      containers:
      - env:
        - name: KAFKA_BOOTSTRAP_SERVERS
          value: trial-kafk-cd--immn-un-cqodukqg.bf2.kafka.rhcloud.com:443
        - name: PREDICTION_SERVICE_URL
          value: http://accident-classifier:5000
        - name: MINIO_ENDPOINT
          value: http://minio:9000
        - name: MINIO_ACCESSKEY
          value: minio
        - name: MINIO_SECRETKEY
          value: minio012
        image: quay.io/balki404/fai-event-consumer
        imagePullPolicy: Always
        name: fai-event-consumer
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fai-event-consumer
    app.kubernetes.io/component: fai-event-consumer
    app.kubernetes.io/instance: fai-event-consumer
    app.kubernetes.io/name: fai-event-consumer
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-consumer
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app: fai-event-consumer
    deployment: fai-event-consumer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fai-event-consumer
    app.kubernetes.io/component: fai-event-consumer
    app.kubernetes.io/instance: fai-event-consumer
    app.kubernetes.io/name: fai-event-consumer
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-consumer
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fai-event-consumer
    weight: 100
  wildcardPolicy: None
