deployment/fai-event-emitter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fai-event-emitter
    app.kubernetes.io/component: fai-event-emitter
    app.kubernetes.io/instance: fai-event-emitter
    app.kubernetes.io/name: fai-event-emitter
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-emitter
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fai-event-emitter
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fai-event-emitter
        deployment: fai-event-emitter
    spec:
      containers:
      - env:
        - name: KAFKA_BOOTSTRAP_SERVERS
          value: trial-kafk-cd--immn-un-cqodukqg.bf2.kafka.rhcloud.com:443
        - name: CLIENT_ID
          value: aaaaaaaaaaaaaaaaaa
        - name: CLIENT_SECRET
          value: yyyyyyyyyyyyyyyyyy          
        image: quay.io/balki404/fai-event-emitter:1.0.0
        imagePullPolicy: Always
        name: fai-event-emitter
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fai-event-emitter
    app.kubernetes.io/component: fai-event-emitter
    app.kubernetes.io/instance: fai-event-emitter
    app.kubernetes.io/name: fai-event-emitter
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-emitter
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    app: fai-event-emitter
    deployment: fai-event-emitter
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fai-event-emitter
    app.kubernetes.io/component: fai-event-emitter
    app.kubernetes.io/instance: fai-event-emitter
    app.kubernetes.io/name: fai-event-emitter
    app.kubernetes.io/part-of: ml-classifier-apps
  name: fai-event-emitter
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fai-event-emitter
    weight: 100
  wildcardPolicy: None
